--- a/.travis.yml
+++ b/.travis.yml
@@ -89,10 +89,15 @@ addons:
 before_install:
   - |
     if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then 
-      brew update
+
       # seems to be needed on Travis due to conflicts with gcc otherwise
       # see https://github.com/travis-ci/travis-ci/issues/8826
       brew cask uninstall oclint
+
+      brew update
+      #now upgrade to avoid problems with outdated packages
+      brew upgrade
+
       brew install ccache
       export PATH="/usr/local/opt/ccache/libexec:$PATH"
       # Install ROOT, unless disabled
