add functions for date-time processing

--- a/src/buildblock/CMakeLists.txt
+++ b/src/buildblock/CMakeLists.txt
@@ -83,7 +83,8 @@ set(${dir_LIB_SOURCES}
 if (HAVE_HDF5)
  list(APPEND ${dir_LIB_SOURCES}
     ProjDataGEHDF5
- )
+    DICOM_date_time_functions
+    )
 endif()
 
 if (NOT HAVE_SYSTEM_GETOPT)
