added date-time functions for Interfile and add time-zone support
This required adding timezone capabilties to Interfile parsing.

Also added functions to get from seconds-since-Unix-epoch to strings.

Changed names to clarify we mean the Unix epoch.

--- a/src/buildblock/CMakeLists.txt
+++ b/src/buildblock/CMakeLists.txt
@@ -79,11 +79,11 @@ set(${dir_LIB_SOURCES}
         num_threads
         GeneralisedPoissonNoiseGenerator
         FilePath
+        date_time_functions
 )
 if (HAVE_HDF5)
  list(APPEND ${dir_LIB_SOURCES}
     ProjDataGEHDF5
-    DICOM_date_time_functions
     )
 endif()
 
