TST: Start of tests for coordinate system mapping. Currently just tests RT matrix fwd and back consistency.

--- a/src/recon_test/CMakeLists.txt
+++ b/src/recon_test/CMakeLists.txt
@@ -28,6 +28,7 @@ set(${dir_SIMPLE_TEST_EXE_SOURCES}
         test_FBP3DRP
         test_OSMAPOSL
         test_priors
+        test_coordinate_system_mapping
 )
 
 
