Implemented xapyb in Array and NumericVectorWithOffset
Implemented NumericVectorWithOffset::xapyb with a,b Vectors
Created test_NumericVectorWithOffset
Implemented Array::xapyb with a,b Arrays
Modified Array::xapyb to use full_iterator

--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -52,6 +52,7 @@ set(buildblock_simple_tests
         test_SeparableGaussianArrayFilter
         test_NestedIterator
         test_VectorWithOffset
+        test_NumericVectorWithOffset
         test_convert_array
 	test_IndexRange
 	test_coordinates
