--- a/src/IO/CMakeLists.txt
+++ b/src/IO/CMakeLists.txt
@@ -84,6 +84,7 @@ if (LLN_FOUND)
 endif()
 
 if (CERN_ROOT_FOUND)
+  target_include_directories(IO PRIVATE ${CERN_ROOT_INCLUDE_DIRS})
   target_link_libraries(IO ${CERN_ROOT_LIBRARIES})
 endif()
 
