--- a/src/cmake/STIRConfig.cmake.in
+++ b/src/cmake/STIRConfig.cmake.in
@@ -2,7 +2,7 @@
 #
 # Author: Kris Thielemans
 # Author Richard Brown
-# Copyright 2016, 2019 University College London
+# Copyright 2016, 2019, 2020 University College London
 #
 #  Licensed under the Apache License, Version 2.0 (the "License");
 #  you may not use this file except in compliance with the License.
@@ -86,14 +86,8 @@ endif()
 
 if (@CERN_ROOT_FOUND@)
   set(CERN_ROOT_CONFIG @CERN_ROOT_CONFIG@)
-  find_package(CERN_ROOT ${STIR_FIND_TYPE})
-  if(NOT CERN_ROOT_FOUND)
-    SET(STIR_FOUND OFF)
-  endif()
+  find_package(CERN_ROOT @CERN_ROOT_VERSION@ REQUIRED ${STIR_FIND_TYPE})
   message(STATUS "CERN ROOT support in STIR enabled.")
-  # need to add this as registries rely on it
-  # would be better to add it to STIR_INCLUDE_DIRS (TODO)
-  include_directories(${CERN_ROOT_INCLUDE_DIRS})
   set(STIR_BUILT_WITH_CERN_ROOT TRUE)
 endif()
 
