--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -139,11 +139,12 @@ if(NOT DISABLE_HDF5)
 endif()
 
 if(NOT DISABLE_NLOHMANN_JSON)
-    find_package(nlohmann_json 3.2.0 QUIET)
+    find_package(nlohmann_json 3.2.0)# QUIET)
     if (nlohmann_json_FOUND)
-        message(STATUS "nlohmann JSON library found.")
-        message(STATUS "The nlohmann JSON library needs C++-11, so we will enable this.")
-        UseCXX(11)
+      message(STATUS "nlohmann JSON library found.")
+      set(HAVE_JSON ON)
+    else()
+      message(STATUS "nlohmann JSON library not found. Try and set nlohmann_jsonDIR if you have it.")
     endif()
 endif()
 
