--- a/src/cmake/STIRConfig.h.in
+++ b/src/cmake/STIRConfig.h.in
@@ -69,6 +69,8 @@ namespace stir {
 
 #cmakedefine HAVE_ITK
 
+#cmakedefine HAVE_JSON
+
 #cmakedefine STIR_WITH_NiftyPET_PROJECTOR
 
 #cmakedefine STIR_OPENMP
