[SWIG] only include HUToMuDataProcessor if HAVE_JSON

--- a/src/swig/CMakeLists.txt
+++ b/src/swig/CMakeLists.txt
@@ -34,6 +34,13 @@ if(BUILD_SWIG_PYTHON OR BUILD_SWIG_OCTAVE OR BUILD_SWIG_MATLAB)
   INCLUDE("${SWIG_USE_FILE}")
 
   SET(CMAKE_SWIG_FLAGS -DSTART_NAMESPACE_STIR=\"namespace stir {\" -DEND_NAMESPACE_STIR=\"}\")
+  # Manually add some flags (really should get this from elsewhere)
+  if (HAVE_LLN_MATRIX)
+    SET(CMAKE_SWIG_FLAGS ${CMAKE_SWIG_FLAGS} -DHAVE_LLN_MATRIX)
+  endif()
+  if (HAVE_JSON)
+    SET(CMAKE_SWIG_FLAGS ${CMAKE_SWIG_FLAGS} -DHAVE_JSON)
+  endif()
 
   SET_SOURCE_FILES_PROPERTIES(stir.i PROPERTIES CPLUSPLUS ON)
 
