--- a/src/recon_buildblock/CMakeLists.txt
+++ b/src/recon_buildblock/CMakeLists.txt
@@ -59,6 +59,7 @@ set(${dir_LIB_SOURCES}
 	ProjectorByBinPairUsingProjMatrixByBin 
 	ProjectorByBinPairUsingSeparateProjectors 
 	BinNormalisation 
+	BinNormalisationWithCalibration
 	ChainedBinNormalisation 
 	BinNormalisationFromProjData 
 	TrivialBinNormalisation 
