--- a/.travis.yml
+++ b/.travis.yml
@@ -99,7 +99,7 @@ before_install:
       brew upgrade
 
       export DYLD_FALLBACK_LIBRARY_PATH=$DYLD_FALLBACK_LIBRARY_PATH:"/usr/local/opt/llvm/lib"
-      export LDFLAGS="-L/usr/local/opt/llvm/lib
+      export LDFLAGS="-L/usr/local/opt/llvm/lib"
 
       brew install ccache
       export PATH="/usr/local/opt/ccache/libexec:$PATH"
