--- a/.travis.yml
+++ b/.travis.yml
@@ -104,11 +104,14 @@ before_install:
       #now upgrade to avoid problems with outdated packages
       brew upgrade
 
-      brew install llvm
-      brew install libomp
+      # check if we're using LLVM
+      if [[ $EXTRA_BUILD_FLAGS == *"llvm"* ]]; then
+        brew install llvm
+        brew install libomp
+        export DYLD_FALLBACK_LIBRARY_PATH=$DYLD_FALLBACK_LIBRARY_PATH:"/usr/local/opt/llvm/lib"
+        export LDFLAGS="-L/usr/local/opt/llvm/lib"
+      fi
 
-      export DYLD_FALLBACK_LIBRARY_PATH=$DYLD_FALLBACK_LIBRARY_PATH:"/usr/local/opt/llvm/lib"
-      export LDFLAGS="-L/usr/local/opt/llvm/lib"
 
       brew install ccache
       export PATH="/usr/local/opt/ccache/libexec:$PATH"
