[TRAVIS] add LLVM job with openMP for OSX (#673)
add a travis job on OSX with OpenMP and `brew install lllvm`, export llvm lib and dyld paths. Use  `ENABLE_EXPERIMENTAL=ON` for this job as well

--- a/.travis.yml
+++ b/.travis.yml
@@ -47,6 +47,12 @@ matrix:
    python: 3
    env: EXTRA_BUILD_FLAGS="-DDISABLE_CERN_ROOT=1 -DSTIR_OPENMP:BOOL=OFF -DSTIR_ENABLE_EXPERIMENTAL:BOOL=ON" CC=clang CXX=clang++
 
+   # osx, OpenMP using llvm clang
+ - os: osx
+   osx_image: xcode11.3
+   python: 3
+   env: EXTRA_BUILD_FLAGS="-DDISABLE_CERN_ROOT=1 -DSTIR_OPENMP:BOOL=ON -DSTIR_ENABLE_EXPERIMENTAL:BOOL=ON -DCMAKE_CXX_COMPILER=/usr/local/opt/llvm/bin/clang++ -DCMAKE_C_COMPILER=/usr/local/opt/llvm/bin/clang"
+
 env:
   global:
   - BUILD_FLAGS="-DBUILD_SWIG_PYTHON:BOOL=On -DSTIR_MPI:BOOL=Off -DCMAKE_BUILD_TYPE=Release"
@@ -97,6 +103,15 @@ before_install:
       brew update
       #now upgrade to avoid problems with outdated packages
       brew upgrade
+
+      # check if we're using LLVM
+      if [[ $EXTRA_BUILD_FLAGS == *"llvm"* ]]; then
+        brew install llvm
+        brew install libomp
+        export DYLD_FALLBACK_LIBRARY_PATH=$DYLD_FALLBACK_LIBRARY_PATH:"/usr/local/opt/llvm/lib"
+        export LDFLAGS="-L/usr/local/opt/llvm/lib"
+      fi
+
 
       brew install ccache
       export PATH="/usr/local/opt/ccache/libexec:$PATH"
