add "multi" in/output format for ParametricDiscretisedDensity
it needed another constructor for ParametricDiscretisedDensity as well

--- a/src/IO/CMakeLists.txt
+++ b/src/IO/CMakeLists.txt
@@ -33,6 +33,7 @@ set(${dir_LIB_SOURCES}
   InterfileDynamicDiscretisedDensityOutputFileFormat 
   InterfileParametricDiscretisedDensityOutputFileFormat
   MultiDynamicDiscretisedDensityOutputFileFormat
+  MultiParametricDiscretisedDensityOutputFileFormat
 
   GIPL_ImageFormat
   stir_ecat_common 
