--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -137,6 +137,8 @@ ADD_TEST(test_IO_ParametricDiscretisedDensity_Interfile
 	${CMAKE_CURRENT_BINARY_DIR}/test_IO_ParametricDiscretisedDensity ${CMAKE_CURRENT_SOURCE_DIR}/input/test_InterfileOutputFileFormat.in)
 ADD_TEST(test_IO_ParametricDiscretisedDensity_Interfile_short
 	${CMAKE_CURRENT_BINARY_DIR}/test_IO_ParametricDiscretisedDensity ${CMAKE_CURRENT_SOURCE_DIR}/input/test_InterfileOutputFileFormat_short.in)
+ADD_TEST(test_IO_ParametricDiscretisedDensity_Multi
+	${CMAKE_CURRENT_BINARY_DIR}/test_IO_ParametricDiscretisedDensity ${CMAKE_CURRENT_SOURCE_DIR}/input/test_MultiOutputFileFormat.in)
 
 # Dynamic tests
 ADD_TEST(test_IO_DynamicDiscretisedDensity_Interfile 
