Change Signa to HDF5

--- a/src/listmode_buildblock/CMakeLists.txt
+++ b/src/listmode_buildblock/CMakeLists.txt
@@ -20,8 +20,8 @@ set(${dir_LIB_SOURCES}
 
 if (HAVE_HDF5)
 list(APPEND ${dir_LIB_SOURCES}
-        CListModeDataGESigna
-        # CListRecordGESigna
+        CListModeDataGEHDF5
+        # CListRecordGEHDF5
 )
 endif()
 
