--- a/src/listmode_utilities/CMakeLists.txt
+++ b/src/listmode_utilities/CMakeLists.txt
@@ -27,6 +27,7 @@ set(${dir_EXE_SOURCES}
   lm_to_projdata_bootstrap
   lm_to_projdata_with_random_rejection
   lm_fansums
+  list_lm_info
   list_lm_events
   list_lm_countrates
 )
