Initial commit of Tsai's Logcosh
This was copied from UCL-STIR

--- a/src/recon_buildblock/CMakeLists.txt
+++ b/src/recon_buildblock/CMakeLists.txt
@@ -70,6 +70,7 @@ set(${dir_LIB_SOURCES}
 	PLSPrior
         QuadraticPrior
         RelativeDifferencePrior
+		LogcoshPrior
 	FilterRootPrior 
 	GeneralisedObjectiveFunction 
 	PoissonLogLikelihoodWithLinearModelForMean 
