--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,4 +3,4 @@ repos:
     rev: master
     hooks:
     -   id: clang-format
-        files: \.(c|cc|cxx|cpp|h|hpp|hxx|inl|txx)
+        files: \.(c|cc|cxx|cpp|h|hpp|hxx|inl|txx)$
