[CMake] fix dependency on nlohmann_json in exported config
Packages that depend on STIR also need to depend on nlohmann_json
if STIR was built with it, otherwise their CMake config will fail.

Fixes https://github.com/SyneRBI/SIRF-SuperBuild/issues/440

--- a/src/cmake/STIRConfig.cmake.in
+++ b/src/cmake/STIRConfig.cmake.in
@@ -104,6 +104,12 @@ if (@AVW_FOUND@)
   set(STIR_BUILT_WITH_AVW TRUE)
 endif()
 
+
+if (@nlohmann_json_FOUND@)
+  find_package(nlohmann_json 3.2.0 ${STIR_FIND_TYPE})
+  set(STIR_BUILD_WITH_nlohmann_json TRUE)
+endif()
+
 if (@STIR_MPI@)
   find_package(MPI ${STIR_FIND_TYPE})
   if(NOT MPI_FOUND)
