[CMake] fix dependency on nlohmann_json in exported config (#728)
Packages that depend on STIR also needed to depend on nlohmann_json
if STIR was built with it, otherwise their CMake config would fail.

However, this library is header-only and is only needed at build-time.
We put in a work-around such that anyone using STIR doesn't need
to have that library.

Fixes https://github.com/SyneRBI/SIRF-SuperBuild/issues/440

--- a/src/cmake/STIRConfig.cmake.in
+++ b/src/cmake/STIRConfig.cmake.in
@@ -104,6 +104,15 @@ if (@AVW_FOUND@)
   set(STIR_BUILT_WITH_AVW TRUE)
 endif()
 
+# Following lines are currently not necessary but would need to be enabled
+# if nlohmann_json stops being a header-only library.
+# See buildblock/CMakeLists.xt
+#
+#if (@nlohmann_json_FOUND@)
+#  find_package(nlohmann_json 3.2.0 ${STIR_FIND_TYPE})
+#  set(STIR_BUILD_WITH_nlohmann_json TRUE)
+#endif()
+
 if (@STIR_MPI@)
   find_package(MPI ${STIR_FIND_TYPE})
   if(NOT MPI_FOUND)
