Rename Kappa methods Hessian_row_sum
This generalised the Hessian_row_sum class to implementation of hessian methods with input = ones.

--- a/src/recon_buildblock/CMakeLists.txt
+++ b/src/recon_buildblock/CMakeLists.txt
@@ -78,7 +78,7 @@ set(${dir_LIB_SOURCES}
 	PoissonLogLikelihoodWithLinearModelForMeanAndListModeDataWithProjMatrixByBin 
         PoissonLogLikelihoodWithLinearKineticModelAndDynamicProjectionData	
         PoissonLogLikelihoodWithLinearModelForMeanAndGatedProjDataWithMotion
-	KappaComputation
+	Hessian_row_sum
 )
 
 if (HAVE_ECAT)
