doc and swig changes

--- a/src/swig/CMakeLists.txt
+++ b/src/swig/CMakeLists.txt
@@ -23,7 +23,7 @@ if(BUILD_SWIG_PYTHON OR BUILD_SWIG_OCTAVE OR BUILD_SWIG_MATLAB)
   FIND_PACKAGE(SWIG 3.0 REQUIRED)
   INCLUDE("${SWIG_USE_FILE}")
 
-  SET(CMAKE_SWIG_FLAGS -DSTART_NAMESPACE_STIR=\"namespace stir {\" -DEND_NAMESPACE_STIR=\"}\")
+  SET(CMAKE_SWIG_FLAGS -DSTART_NAMESPACE_STIR=\"namespace stir {\" -DEND_NAMESPACE_STIR=\"}\" -DSTIR_DEPRECATED="")
 
   SET_SOURCE_FILES_PROPERTIES(stir.i PROPERTIES CPLUSPLUS ON)
   # some include files in STIR have "#ifdef SWIG" statements, so we defined the variable here
