--- a/.travis.yml
+++ b/.travis.yml
@@ -36,6 +36,7 @@ matrix:
    ####  osx
    # note: cannot use OpenMP on OSX yet, see https://github.com/UCL/STIR/issues/117
  - os: osx
+   osx_image: xcode12.2
    python: 3
    env: EXTRA_BUILD_FLAGS="-DDISABLE_CERN_ROOT=1 -DSTIR_OPENMP:BOOL=OFF" CC=gcc CXX=g++
    # Disable as ROOT is currently failing via brew (as it wants to build it, and which causes a timeout)
