Renamed SqrtHessianRowSum, fix setup, documentation, del non-STIR method
 - Renamed Hessian_row_sum class to `SqrtHessianRowSum` to better fit the usage of the class.
 - Created `set_up()` method for `SqrtHessianRowSum` and removed the `save_output()` method, which loads images, creates output image and sets up the objective function.
 - Moved the sqrt operation and save image to process_data()

--- a/src/recon_buildblock/CMakeLists.txt
+++ b/src/recon_buildblock/CMakeLists.txt
@@ -78,7 +78,7 @@ set(${dir_LIB_SOURCES}
 	PoissonLogLikelihoodWithLinearModelForMeanAndListModeDataWithProjMatrixByBin 
         PoissonLogLikelihoodWithLinearKineticModelAndDynamicProjectionData	
         PoissonLogLikelihoodWithLinearModelForMeanAndGatedProjDataWithMotion
-	Hessian_row_sum
+	SqrtHessianRowSum
 )
 
 if (HAVE_ECAT)
