updated test scripts for view-offset
The interpolating backprojector doesn't support view-offset yet, so FBP tests failed.
We now run them on data with view-offset = 0.

--- a/scripts/CMakeLists.txt
+++ b/scripts/CMakeLists.txt
@@ -30,7 +30,8 @@ set(${dir_scripts}
   zoom_att_image.sh
   get_num_voxels.sh
   create_fdef_from_listmode.sh
-)
+  force_view_offset_to_zero.sh
+  )
 
 
 
