added skeleton files for calling Parallelproj projectors
These are based on the NiftyPET work and currently follow a similar strategy of
doing the whole projection upfront

The code runs, but actually doesn't do any projections yet

--- a/src/cmake/STIRConfig.h.in
+++ b/src/cmake/STIRConfig.h.in
@@ -73,6 +73,8 @@ namespace stir {
 
 #cmakedefine STIR_WITH_NiftyPET_PROJECTOR
 
+#cmakedefine STIR_WITH_Parallelproj_PROJECTOR
+
 #cmakedefine STIR_OPENMP
 
 #cmakedefine STIR_MPI
