fix CMake for finding parallelproj

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -176,10 +176,10 @@ endif()
 if(NOT DISABLE_Parallelproj_PROJECTOR)
   # TODO
   #if (CUDAToolkit_FOUND)
-    #find_package(Parallelproj)
-    #if (Parallelproj_FOUND)
+    find_package(parallelproj)
+    if (parallelproj_FOUND)
       set(STIR_WITH_Parallelproj_PROJECTOR ON)
-    #endif()
+    endif()
   #endif()
 endif()
 if (STIR_WITH_Parallelproj_PROJECTOR)
