--- a/src/cmake/STIRConfig.h.in
+++ b/src/cmake/STIRConfig.h.in
@@ -74,6 +74,7 @@ namespace stir {
 #cmakedefine STIR_WITH_NiftyPET_PROJECTOR
 
 #cmakedefine STIR_WITH_Parallelproj_PROJECTOR
+#cmakedefine parallelproj_built_with_CUDA
 
 #cmakedefine STIR_OPENMP
 
