--- a/src/data_buildblock/CMakeLists.txt
+++ b/src/data_buildblock/CMakeLists.txt
@@ -25,7 +25,8 @@ set (dir_LIB_SOURCES ${dir}_LIB_SOURCES)
 
 set(${dir_LIB_SOURCES}
 	SinglesRates 
-	SinglesRatesForTimeFrames 
+	SinglesRatesForTimeFrames
+        randoms_from_singles
 )
 if (HAVE_ECAT)
   list(APPEND  ${dir_LIB_SOURCES}
