add find_package(parallelproj) in STIRConfig.cmake [ci skip]
without it, anyone finding STIR will get linking errors to target
parallelproj::parallelproj_c (or cuda)

--- a/src/cmake/STIRConfig.cmake.in
+++ b/src/cmake/STIRConfig.cmake.in
@@ -132,6 +132,11 @@ if(@STIR_WITH_NiftyPET_PROJECTOR@)
   set(STIR_WITH_NiftyPET_PROJECTOR TRUE)
 endif()
 
+if(@STIR_WITH_Parallelproj_PROJECTOR@)
+  find_package(parallelproj REQUIRED)
+  set(STIR_WITH_Parallelproj_PROJECTOR TRUE)
+endif()
+
 SET(STIR_WITH_EXPERIMENTAL @STIR_ENABLE_EXPERIMENTAL@)
 if(STIR_WITH_EXPERIMENTAL)
     if(${CMAKE_VERSION} VERSION_LESS "3.12.0")
