[CMake] write better diagnostics on parallelproj

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -177,16 +177,17 @@ if(NOT DISABLE_Parallelproj_PROJECTOR)
     find_package(parallelproj)
     if (parallelproj_FOUND)
       set(STIR_WITH_Parallelproj_PROJECTOR ON)
-      #if (parallelproj_built_with_CUDA)
-      #  set(STIR_WITH_Parallelproj_GPU_PROJECTOR ON)
-      #endif()
+      if (parallelproj_built_with_CUDA)
+        message(STATUS "Found parallelproj (will use its CUDA support)")
+      else()
+        message(STATUS "Found parallelproj (but using its OpenMP version as it wasn't built with CUDA)")
+      endif()
     endif()
-  #endif()
 endif()
 if (STIR_WITH_Parallelproj_PROJECTOR)
   message(STATUS "Parallelproj projector support enabled.")
 else()
-  message(STATUS "Parallelproj projector support disabled.")
+  message(STATUS "Parallelproj projector support disabled or not available.")
 endif()
 
 #### enable support for ctest
