--- a/src/cmake/STIRConfig.h.in
+++ b/src/cmake/STIRConfig.h.in
@@ -92,5 +92,5 @@ namespace stir {
 #endif
 
 #cmakedefine STIR_PROJECTORS_AS_V3
-
+#cmakedefine STIR_LEGACY_IGNORE_VIEW_OFFSET
 #endif //  __stir_config__H__
