1) correct path installatio for Json files; 2) set STIR_CONFIG_DIR value to be used in C++ code; 3) update radionuclide Database.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -83,12 +83,12 @@ endif()
 # TODO append version numbers
 set(STIR_DATA_DIR "share/stir") 
 set(ConfigPackageLocation lib/cmake/)
-set(STIR_CONFIG_DIR "" CACHE PATH "") 
+set(STIR_CONFIG_DIR "${CMAKE_INSTALL_PREFIX}/share/stir/config" CACHE PATH "") 
 message("${STIR_CONFIG_DIR} defined")
 ####### External packages
 # Note: we need to have the find_package statements in the top-level CMakeLists.txt
 # such that we can use it in STIRConfig.cmake.in (see below).
-
+ 
 #### we need the boost library from boost.org
 set(BOOST_ROOT CACHE PATH "root of Boost")
 find_package( Boost 1.36.0 REQUIRED )
