renamed from findSTIRConfig to find_STIR_config

--- a/src/buildblock/CMakeLists.txt
+++ b/src/buildblock/CMakeLists.txt
@@ -8,7 +8,7 @@ set(${dir_LIB_SOURCES}
   PatientPosition
   ExamInfo
   ExamData
-  findSTIRConfig
+  find_STIR_config
   ProjData 
   ProjDataInfo 
   ProjDataInfoCylindrical 
