--- a/src/listmode_buildblock/CMakeLists.txt
+++ b/src/listmode_buildblock/CMakeLists.txt
@@ -5,44 +5,44 @@ set(dir listmode_buildblock)
 set (dir_LIB_SOURCES ${dir}_LIB_SOURCES)
 
 set(${dir_LIB_SOURCES}
-        ListModeData
-        ListEvent
-        CListEvent
-        LmToProjDataAbstract
-	LmToProjData 
-        LmToProjDataBootstrap
-	LmToProjDataWithRandomRejection
-        CListModeDataECAT8_32bit
-        CListRecordECAT8_32bit
-	CListModeDataSAFIR
-	DetectorCoordinateMapFromFile
+        ListModeData.cxx
+        ListEvent.cxx
+        CListEvent.cxx
+        LmToProjDataAbstract.cxx
+	LmToProjData.cxx
+        LmToProjDataBootstrap.cxx
+	LmToProjDataWithRandomRejection.cxx
+        CListModeDataECAT8_32bit.cxx
+        CListRecordECAT8_32bit.cxx
+	CListModeDataSAFIR.cxx
+	DetectorCoordinateMapFromFile.cxx
 )
 
 if (HAVE_HDF5)
 list(APPEND ${dir_LIB_SOURCES}
-        CListModeDataGEHDF5
-        # CListRecordGEHDF5
+        CListModeDataGEHDF5.cxx
+        # CListRecordGEHDF5.cxx
 )
 endif()
 
 if (HAVE_ECAT)
   list(APPEND ${dir_LIB_SOURCES}
-	CListModeDataECAT 
-	CListRecordECAT962 
-	CListRecordECAT966 
+	CListModeDataECAT.cxx
+	CListRecordECAT962.cxx
+	CListRecordECAT966.cxx
   )
 endif()
 
 if (HAVE_CERN_ROOT)
 	list(APPEND ${dir_LIB_SOURCES}
-		CListModeDataROOT
-		CListRecordROOT
+		CListModeDataROOT.cxx
+		CListRecordROOT.cxx
 	)
 endif()
 
 if (STIR_WITH_NiftyPET_PROJECTOR)
   list(APPEND ${dir_LIB_SOURCES}
-    NiftyPET_listmode/LmToProjDataNiftyPET
+    NiftyPET_listmode/LmToProjDataNiftyPET.cxx
   )
 endif()
 
