--- a/src/scatter_utilities/CMakeLists.txt
+++ b/src/scatter_utilities/CMakeLists.txt
@@ -22,10 +22,10 @@ set(dir scatter_utilities)
 set(dir_EXE_SOURCES ${dir}_EXE_SOURCES)
 
 set(${dir_EXE_SOURCES}
-	estimate_scatter
-	create_tail_mask_from_ACFs
-	upsample_and_fit_single_scatter
-	simulate_scatter
+	estimate_scatter.cxx
+	create_tail_mask_from_ACFs.cxx
+	upsample_and_fit_single_scatter.cxx
+	simulate_scatter.cxx
 )
 
 include(stir_exe_targets)
