--- a/src/modelling_utilities/CMakeLists.txt
+++ b/src/modelling_utilities/CMakeLists.txt
@@ -23,13 +23,13 @@ set(dir modelling_utilities)
 set(dir_EXE_SOURCES ${dir}_EXE_SOURCES)
 
 set(${dir_EXE_SOURCES}
-	apply_patlak_to_images
-	get_dynamic_images_from_parametric_images
-	make_parametric_image_from_components
-	extract_single_images_from_dynamic_image
-	mult_model_with_dyn_images
-	write_patlak_matrix
-	mult_image_parameters
+	apply_patlak_to_images.cxx
+	get_dynamic_images_from_parametric_images.cxx
+	make_parametric_image_from_components.cxx
+	extract_single_images_from_dynamic_image.cxx
+	mult_model_with_dyn_images.cxx
+	write_patlak_matrix.cxx
+	mult_image_parameters.cxx
 )
 
 include(stir_exe_targets)
