making compilation independent by JSON; class clean up; added relevant warning related to the effect of not having JSON installed.

--- a/src/cmake/STIRConfig.h.in
+++ b/src/cmake/STIRConfig.h.in
@@ -82,6 +82,8 @@ namespace stir {
 
 #cmakedefine STIR_CONFIG_DIR "@STIR_CONFIG_DIR@"
 
+#cmakedefine nlohmann_json_FOUND "@nlohmann_json_FOUND@"
+
 #cmakedefine STIR_USE_BOOST_SHARED_PTR
 
 #cmakedefine STIR_NO_UNIQUE_PTR
