making compilation independent by JSON: add #ifdef for include; cxx new file in cmakelist.

--- a/src/buildblock/CMakeLists.txt
+++ b/src/buildblock/CMakeLists.txt
@@ -8,8 +8,8 @@ set(${dir_LIB_SOURCES}
   PatientPosition.cxx
   ExamInfo.cxx
   ExamData.cxx
-  RadionuclideDBProcessor
-  find_STIR_config
+  RadionuclideDBProcessor.cxx
+  find_STIR_config.cxx
   ProjData.cxx
   ProjDataInfo.cxx
   ProjDataInfoCylindrical.cxx
