--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,25 @@
 # Language selection
 language: cpp
+dist: bionic  # default to Ubuntu 18.04 LTS
 
 cache: ccache
+
+# Compilation dependencies
+addons:
+ apt:
+  sources:
+  - ubuntu-toolchain-r-test
+  packages: &addons_apt_packages
+  - libboost-dev
+  - libhdf5-serial-dev
+  - swig
+  - python3-dev
+  - python3-numpy
+  - python3-pytest
+  - root-system-bin
+  - libroot-tree-dev
+  - libroot-tree-treeplayer-dev
+  - libroot-io-dev
 
 # Environment variables:
 # To avoid too many builds, we mix some options (although independent tests would have been better)
@@ -10,86 +28,84 @@ matrix:
    #### linux
  - os: linux
    python: 3
+   addons:
+    apt:
+     packages:
+     - *addons_apt_packages
+     - [g++-6]
    env: EXTRA_BUILD_FLAGS="-DDISABLE_CERN_ROOT=0 -DSTIR_OPENMP:BOOL=OFF" CC=gcc-6 CXX=g++-6
  - os: linux
    python: 3
+   addons:
+    apt:
+     packages:
+     - *addons_apt_packages
+     - [g++-5, libinsighttoolkit4-dev]
    env: EXTRA_BUILD_FLAGS="-DDISABLE_CERN_ROOT=1 -DSTIR_OPENMP:BOOL=OFF -DDISABLE_HDF5=ON" CC=gcc-5 CXX=g++-5
  - os: linux
    python: 3
+   addons:
+    apt:
+     packages:
+     - *addons_apt_packages
+     - [g++-7, libinsighttoolkit4-dev]
    env: EXTRA_BUILD_FLAGS="-DDISABLE_CERN_ROOT=0 -DSTIR_OPENMP:BOOL=ON" CC=gcc-7 CXX=g++-7
  - os: linux
+   dist: focal
    python: 3
+   addons:
+    apt:
+     packages:
+     - *addons_apt_packages
+     - [g++-8, libinsighttoolkit4-dev, nlohman-json3-dev]
    env: EXTRA_BUILD_FLAGS="-DDISABLE_CERN_ROOT=0 -DSTIR_OPENMP:BOOL=ON" CC=gcc-8 CXX=g++-8
  - os: linux
+   dist: focal
    python: 3
-   env: EXTRA_BUILD_FLAGS="-DDISABLE_CERN_ROOT=0 -DSTIR_OPENMP:BOOL=ON -DCMAKE_CXX_STANDARD=11" CC=gcc-5 CXX=g++-5
+   addons:
+    apt:
+     packages:
+     - *addons_apt_packages
+     - [g++-10, nlohman-json3-dev]
+   env: EXTRA_BUILD_FLAGS="-DDISABLE_CERN_ROOT=0 -DSTIR_OPENMP:BOOL=ON" CC=gcc-10 CXX=g++-10
  - os: linux
+   dist: focal
    python: 3
+   addons:
+    apt:
+     packages:
+     - *addons_apt_packages
+     - [clang-10, libomp-10-dev]
    # need -Wno-deprecated-declarations to avoid log-file limit due to tons of warnings about auto_ptr
-   env: EXTRA_BUILD_FLAGS="-DDISABLE_CERN_ROOT=1 -DSTIR_OPENMP:BOOL=OFF" CXXFLAGS="-Wno-deprecated-declarations" CC=clang-5.0 CXX=clang++-5.0
-# no clang-6 on trusty, so disabled
-# - os: linux
+   env: EXTRA_BUILD_FLAGS="-DDISABLE_CERN_ROOT=1 -DSTIR_OPENMP:BOOL=ON"  CC=clang-10.0 CXX=clang++-10.0
+
+#   ####  osx
+#   # note: cannot use OpenMP on OSX yet, see https://github.com/UCL/STIR/issues/117
+# - os: osx
+#   osx_image: xcode12.2
 #   python: 3
-#   # OPENMP on Travis seemed to be version 1 (???), so don't build it
-#   env: EXTRA_BUILD_FLAGS="-DDISABLE_CERN_ROOT=1 -DSTIR_OPENMP:BOOL=OFF -DCMAKE#_CXX_STANDARD=11" CXXFLAGS="-Wno-deprecated-declarations" CC=clang-6.0 CXX=clang++-6.0
-
-   ####  osx
-   # note: cannot use OpenMP on OSX yet, see https://github.com/UCL/STIR/issues/117
- - os: osx
-   osx_image: xcode12.2
-   python: 3
-   env: EXTRA_BUILD_FLAGS="-DDISABLE_CERN_ROOT=1 -DSTIR_OPENMP:BOOL=OFF" CC=gcc CXX=g++
-   # Disable as ROOT is currently failing via brew (as it wants to build it, and which causes a timeout)
- #- os: osx
- #  python: 3
- #  env: EXTRA_BUILD_FLAGS="-DDISABLE_CERN_ROOT=0 -DSTIR_OPENMP:BOOL=OFF" CC=gcc CXX=g++
- - os: osx
-   osx_image: xcode11.3
-   python: 3
-   env: EXTRA_BUILD_FLAGS="-DDISABLE_CERN_ROOT=1 -DSTIR_OPENMP:BOOL=OFF -DSTIR_ENABLE_EXPERIMENTAL:BOOL=ON" CC=clang CXX=clang++
-
-   # osx, OpenMP using llvm clang
- - os: osx
-   osx_image: xcode11.3
-   python: 3
-   env: EXTRA_BUILD_FLAGS="-DDISABLE_CERN_ROOT=1 -DSTIR_OPENMP:BOOL=ON -DSTIR_ENABLE_EXPERIMENTAL:BOOL=ON -DCMAKE_CXX_COMPILER=/usr/local/opt/llvm/bin/clang++ -DCMAKE_C_COMPILER=/usr/local/opt/llvm/bin/clang"
+#   env: EXTRA_BUILD_FLAGS="-DDISABLE_CERN_ROOT=1 -DSTIR_OPENMP:BOOL=OFF" CC=gcc CXX=g++
+#   # Disable as ROOT is currently failing via brew (as it wants to build it, and which causes a timeout)
+# #- os: osx
+# #  python: 3
+# #  env: EXTRA_BUILD_FLAGS="-DDISABLE_CERN_ROOT=0 -DSTIR_OPENMP:BOOL=OFF" CC=gcc CXX=g++
+# - os: osx
+#   osx_image: xcode11.3
+#   python: 3
+#   env: EXTRA_BUILD_FLAGS="-DDISABLE_CERN_ROOT=1 -DSTIR_OPENMP:BOOL=OFF -DSTIR_ENABLE_EXPERIMENTAL:BOOL=ON" CC=clang CXX=clang++
+#
+#   # osx, OpenMP using llvm clang
+# - os: osx
+#   osx_image: xcode11.3
+#   python: 3
+#   env: EXTRA_BUILD_FLAGS="-DDISABLE_CERN_ROOT=1 -DSTIR_OPENMP:BOOL=ON -DSTIR_ENABLE_EXPERIMENTAL:BOOL=ON -DCMAKE_CXX_COMPILER=/usr/local/opt/llvm/bin/clang++ -DCMAKE_C_COMPILER=/usr/local/opt/llvm/bin/clang"
 
 env:
   global:
   - BUILD_FLAGS="-DBUILD_SWIG_PYTHON:BOOL=On -DSTIR_MPI:BOOL=Off -DCMAKE_BUILD_TYPE=Release"
 
-
-# Ubuntu 14.04 LTS (trusty)
-dist: trusty
-
 # No need for sudo
 sudo: false
-
-# Compilation dependencies
-addons:
-  apt:
-    sources:
-      - llvm-toolchain-trusty-5.0
-      # - llvm-toolchain-trusty-6.0
-      - ubuntu-toolchain-r-test
-    packages:
-      - g++-5
-      - g++-6
-      - g++-7
-      - g++-8
-      - libboost-dev
-      - libhdf5-serial-dev
-      - swig3.0
-      - python3-dev
-      - python3-numpy
-      - python3-pytest
-      - libgomp1
-      - clang-5.0
-      # - clang-6.0 # no clang-6 on trusty, so disabled
-      - root-system-bin
-      - libroot-tree-dev
-      - libroot-tree-treeplayer-dev
-      - libroot-io-dev
 
 # Actual compilation script
 
