--- a/.travis.yml
+++ b/.travis.yml
@@ -16,10 +16,11 @@ addons:
   - python3-dev
   - python3-numpy
   - python3-pytest
-  - root-system-bin
-  - libroot-tree-dev
-  - libroot-tree-treeplayer-dev
-  - libroot-io-dev
+  # these were for trusty
+  #- root-system-bin
+  #- libroot-tree-dev
+  #- libroot-tree-treeplayer-dev
+  #- libroot-io-dev
 
 # Environment variables:
 # To avoid too many builds, we mix some options (although independent tests would have been better)
@@ -33,7 +34,7 @@ matrix:
      packages:
      - *addons_apt_packages
      - [g++-6]
-   env: EXTRA_BUILD_FLAGS="-DDISABLE_CERN_ROOT=0 -DSTIR_OPENMP:BOOL=OFF" CC=gcc-6 CXX=g++-6
+   env: EXTRA_BUILD_FLAGS="-DDISABLE_CERN_ROOT=1 -DSTIR_OPENMP:BOOL=OFF" CC=gcc-6 CXX=g++-6
  - os: linux
    python: 3
    addons:
@@ -57,8 +58,8 @@ matrix:
     apt:
      packages:
      - *addons_apt_packages
-     - [g++-8, libinsighttoolkit4-dev, nlohman-json3-dev]
-   env: EXTRA_BUILD_FLAGS="-DDISABLE_CERN_ROOT=0 -DSTIR_OPENMP:BOOL=ON" CC=gcc-8 CXX=g++-8
+     - [g++-9, libinsighttoolkit4-dev, nlohman-json3-dev]
+   env: EXTRA_BUILD_FLAGS="-DDISABLE_CERN_ROOT=0 -DSTIR_OPENMP:BOOL=ON" CC=gcc-9 CXX=g++-9
  - os: linux
    dist: focal
    python: 3
@@ -67,7 +68,7 @@ matrix:
      packages:
      - *addons_apt_packages
      - [g++-10, nlohman-json3-dev]
-   env: EXTRA_BUILD_FLAGS="-DDISABLE_CERN_ROOT=0 -DSTIR_OPENMP:BOOL=ON" CC=gcc-10 CXX=g++-10
+   env: EXTRA_BUILD_FLAGS="-DDISABLE_CERN_ROOT=1 -DSTIR_OPENMP:BOOL=ON" CC=gcc-10 CXX=g++-10
  - os: linux
    dist: focal
    python: 3
@@ -153,6 +154,22 @@ before_install:
       ${PY_EXE} -m pip install -U pip
       ${PY_EXE} -m pip install pytest numpy
     else
+      # Install ROOT, unless disabled
+      case "$EXTRA_BUILD_FLAGS" in
+          *DISABLE_CERN_ROOT=1*)
+              echo "Not installing ROOT to save some time (and potential time-outs)";;
+          *)
+              ubuntu_major=`lsb_release -rs| awk -F. '{print $1}'`
+              case $ubuntu_major in
+                 18) rootcc=gcc-7.5;;
+                 19) rootcc=gcc-9.2;;
+                 20) rootcc=gcc-9.3;;
+              esac
+              rootfile=root_v6.24.00.Linux-ubuntu${ubuntu_major}-x86_64-${rootcc}.tar.gz
+              wget https://root.cern/download/$rootfile
+              tar xzf $rootfile
+              source root/bin/thisroot.sh
+      esac
       PY_EXE=`which python3`
       # needed for OPENMP support on Travis
       # see https://github.com/travis-ci/travis-ci/issues/8613
