--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,6 @@
 repos:
 -   repo: git://github.com/doublify/pre-commit-clang-format
-    rev: master
+    rev: 62302476d0da01515660132d76902359bed0f782
     hooks:
     -   id: clang-format
         files: \.(c|cc|cxx|cpp|h|hpp|hxx|inl|txx)$
