Further changes and renaming: - changed name from RadionuclideDBProcessor to RadionuclideDB - chenaged name of functions to be consistent with STIR, define read_from_file, change isotope to radionculide everywhere - call get_radionuclidename_fromlookuptable is called from the get_radionuclide() - branching_ratio member is removed from BinNormalisationWithCalibration as it is already defined in the memeber Radionulcide.

--- a/src/buildblock/CMakeLists.txt
+++ b/src/buildblock/CMakeLists.txt
@@ -8,7 +8,7 @@ set(${dir_LIB_SOURCES}
   PatientPosition.cxx
   ExamInfo.cxx
   ExamData.cxx
-  RadionuclideDBProcessor.cxx
+  RadionuclideDB.cxx
   find_STIR_config.cxx
   ProjData.cxx
   ProjDataInfo.cxx
