create Radionuclide.cxx and remove .inl

--- a/src/buildblock/CMakeLists.txt
+++ b/src/buildblock/CMakeLists.txt
@@ -9,6 +9,7 @@ set(${dir_LIB_SOURCES}
   ExamInfo.cxx
   ExamData.cxx
   RadionuclideDB.cxx
+  Radionuclide.cxx
   find_STIR_config.cxx
   ProjData.cxx
   ProjDataInfo.cxx
